[kcms/user] Set interactive auth flag for more calls

Creating and deleting users needs that too

This also means that we need to be more correct with the types passed into the DBus calls since with passing the args as list we don't get implicit conversion to the correct type any more

BUG: 450122
FIXED-IN: 5.24.2
(cherry picked from commit 79113d99e44ace405bd9211e2c0f73659ff94c0f)